Fixed aligning of elements on the article page

--- a/search/search_engine/searchapp/static/searchapp/sass/search.scss
+++ b/search/search_engine/searchapp/static/searchapp/sass/search.scss
@@ -203,7 +203,7 @@ body, html {
   overflow-y: auto;
 
   h4 {
-    padding-top: 2em;
+    padding-top: 1em;
     padding-left: 1em;
   }
 
@@ -266,6 +266,7 @@ body, html {
 @media screen and (max-width: 600px) {
   .col-md-12 {
     height: 73.5vh;
+    border-radius: 0;
     h4 {
       font-size: 0.8em;
     }
@@ -295,16 +296,12 @@ body, html {
   padding: 0 1.5em;
   margin: 3em auto;
   font-family: 'Raleway', sans-serif;
-  text-align: justify;
+  text-align: center;
 
   .article-img {
     padding: 2em;
     max-width: 35em;
     max-height: 35em;
-  }
-
-  div {
-    text-align: justify;
   }
 
   h2 {
@@ -315,6 +312,7 @@ body, html {
   p {
     font-size: 1em;
     margin-bottom: 2em;
+    text-align: justify;
   }
 
   h4 {
@@ -323,17 +321,18 @@ body, html {
 
   h5 {
     text-align: right;
+
   }
 }
 
 @media screen and (max-width: 600px) {
   .article-container {
     padding: 0 0.1em;
+    text-align: center;
 
     .article-img {
       max-width: 15em;
       max-height: 15em;
-      padding: 0;
     }
 
     h2 {
@@ -347,6 +346,9 @@ body, html {
     h4, h5 {
       font-size: 15px;
       text-align: center;
+      width: 100%;
+      padding-left: 0;
+      overflow-x: auto;
     }
   }
 }
